[package]
name = "hit-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.2"
clap = {version="4.5.4", features=["derive"]}
colored_json = "5.0.0"
commands = "0.0.5"
convert_case = "0.6.0"
crossterm = "0.27.0"
edit = "0.1.5"
flatten-json-object = "0.6.1"
getopts = "0.2.21"
inquire = "0.7.5"
regex = "1.10.4"
reqwest = {version="0.12.3", features=["json"]}
serde_json = "1.0"
tokio = {version = "1.37.0", features = ["full"]}
