[package]
name = "hit-cli"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.2"
array_tool = "1.0.3"
clap = {version="4.5.4", features=["derive", "string"]}
clap_complete = {version="4.5.23", features=["unstable-dynamic"]}
colored = "2.1.0"
colored_json = "5.0.0"
commands = "0.0.5"
convert_case = "0.6.0"
crossterm = "0.27.0"
directories = "5.0.1"
edit = "0.1.5"
flatten-json-object = "0.6.1"
getopts = "0.2.21"
handlebars = "5.1.2"
hyper = "1.3.1"
inquire = "0.7.5"
openapiv3 = "1.0.1"
regex = "1.10.4"
reqwest = {version="0.12.3", features=["json"]}
serde = {version="1.0.200", features=["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
strum = {version="0.26.2", features=["derive"]}
tempfile = "3.12.0"
tokio = {version = "1.37.0", features = ["full"]}

[dev-dependencies]
assert_cmd = "2.0.17"
insta = {version="1.43.1", features=["json"]}
predicates = "3.1.3"
rstest = "0.25.0"
